--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CPP_EXAMPLES
   example_json
   example_print_stream
   example_callback
+    example_callback_with_state
   example_faer
   example_pardiso_mkl
 )
